--- a/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
@@ -1,6 +1,39 @@
-﻿@{
+﻿@using EquiposTecnicosSN.Web.CustomExtensions
+@using EquiposTecnicosSN.Entities.Mantenimiento
+@{
     ViewBag.Title = "Home Page";
 }
+
+<div class="row">
+    <div class="col-md-4">
+        <div class="panel panel-red">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-wrench fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div class="huge">@{ Html.RenderAction("CountOrdenesPrioridad", "OrdenesDeTrabajo", new { prioridad = OrdenDeTrabajoPrioridad.Emergencia.DisplayName() }); }</div>
+                        <div>Ordenes de trabajo urgentes abiertas</div>
+                    </div>
+                </div>
+            </div>
+            <a href="#">
+                <div class="panel-footer">
+                    <span class="pull-left">Ver Todas</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-4">
+    </div>
+</div>
+<!--
+
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
@@ -29,3 +62,4 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+-->
