--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/OrdenDeTrabajo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/OrdenDeTrabajo.cshtml
@@ -1,45 +1,111 @@
-﻿@model EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajo
+﻿@using EquiposTecnicosSN.Entities.Mantenimiento
+@model OrdenDeTrabajo
 
 <div class="panel panel-default">
-    <div class="panel-heading">Nueva @ViewBag.Title</div>
+    <div class="panel-heading">@ViewBag.Title</div>
     <div class="panel-body">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.OrdenDeTrabajoId)
+        @Html.HiddenFor(model => model.EquipoId)
+        @Html.HiddenFor(model => model.Estado)
+
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Mantenimiento, "Mantenimiento", htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownList("MantenimientoId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.MantenimientoId, "", new { @class = "text-danger" })
+                    @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control date-picker" } })
+                    @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.EquipoId, "EquipoId", htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("EquipoId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.EquipoId, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    <label class="control-label switch-label">¿El equipo se encuentra parado?</label>
+                    @Html.EditorFor(model => model.EquipoParado, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-md-6">
+
+                <div class="form-group">
+                    <label>
+                        @Html.DisplayNameFor(model => model.NumeroReferencia)
+                        @Html.HiddenFor(model => model.NumeroReferencia)
+                    </label>
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.NumeroReferencia)
+                    </p>
                 </div>
 
+                <div class="form-group">
+                    <label>
+                        @Html.DisplayNameFor(model => model.Equipo.Ubicacion)
+                    </label>
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Equipo.Ubicacion.Nombre)
+                    </p>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label switch-label">Prioridad</label>
+                    <div class="btn-group" data-toggle="buttons">
+                        <label class="btn btn-success-outline@(OrdenDeTrabajoPrioridad.Normal.Equals(Model.Prioridad) ? " active" : "")">
+                            @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Normal, new { @id = "Normal", @name = "Prioridad" }) @OrdenDeTrabajoPrioridad.Normal.ToString()
+                        </label>
+                        <label class="btn btn-warning-outline @(OrdenDeTrabajoPrioridad.Urgencia.Equals(Model.Prioridad) ? " active" : "")">
+                            @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Urgencia, new { @id = "Urgencia", @name = "Prioridad" }) @OrdenDeTrabajoPrioridad.Urgencia.ToString()
+                        </label>
+                        <label class="btn btn-danger-outline @(OrdenDeTrabajoPrioridad.Emergencia.Equals(Model.Prioridad) ? " active" : "")">
+                            @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Emergencia, new { @id = "Emergencia", @name = "Prioridad" }) @OrdenDeTrabajoPrioridad.Emergencia.ToString()
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr />
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
+                    @Html.TextAreaFor(model => model.Descripcion, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col-md-12">
                 <div class="form-group">
                     @Html.LabelFor(model => model.Diagnostico, htmlAttributes: new { @class = "control-label" })
                     @Html.TextAreaFor(model => model.Diagnostico, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Diagnostico, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col-md-12">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.ProveedorId, "Proveedor", htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownList("ProveedorId", null, "Ninguno", htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.ProveedorId, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Resolucion, htmlAttributes: new { @class = "control-label" })
-                    @Html.TextAreaFor(model => model.Resolucion, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Resolucion, "", new { @class = "text-danger" })
+                    @Html.LabelFor(model => model.DetalleReparacion, htmlAttributes: new { @class = "control-label" })
+                    @Html.TextAreaFor(model => model.DetalleReparacion, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DetalleReparacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+@Html.Partial("_EditGastos", Model.Gastos)
+<!--
+
 <div class="panel panel-default">
     <div class="panel-heading">Gastos</div>
     <div class="panel-body">
         <div class="row">
             <div class="col-md-12">
-                @Html.ActionLink("Añadir Gasto", "AddGastoToOrden", null, new { @id = "addGasto", @class = "btn btn-default" })
+                @*Html.ActionLink("Añadir Gasto", "AddGastoToOrden", null, new { @id = "addGasto", @class = "btn btn-default" })*@
                 <table class="table">
                     <thead>
                         <tr>
@@ -49,10 +115,10 @@
                         </tr>
                     </thead>
                     <tbody id="tablaGastos">
-                        @foreach (var gasto in Model.Gastos)
+                        @*foreach (var gasto in Model.Gastos)*@
                         {
                             <tr class="gastoRow">
-                                @Html.Partial("_AddGastoToOrden", gasto)
+                                @*Html.Partial("_AddGastoToOrden", gasto)*@
                             </tr>
                         }
                     </tbody>
@@ -61,3 +127,4 @@
         </div>
     </div>
 </div>
+-->
